--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test": "nodemon app.js"
   },
   "dependencies": {
+    "async": "^2.1.2",
     "express": "^4.14.0",
-    "helmet": "^3.0.0"
+    "helmet": "^3.0.0",
+    "request": "^2.78.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
