--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "async": "^2.1.2",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "helmet": "^3.0.0",
     "request": "^2.78.0"
