--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "helmet": "^3.0.0",
+    "morgan": "^1.7.0",
     "request": "^2.78.0"
   },
   "devDependencies": {
